flux/apps/base/theme-park/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: theme-park
  namespace: theme-park
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: theme-park
  egress:
    - toEntities:
        - world
        - host
        - kube-apiserver
  ingress:
    - fromEntities:
        - ingress
        - world
        - host
        - kube-apiserver
